--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ main, header, nav, article, aside, footer, section {
     padding: 1%;
   }
 
+main {
+    display: flex;
+}
 
 aside {
     flex: 1;
