--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ h2 {
     text-align: center;
 }
 
+h3 {
+    font-size: 2.75rem;
+    text-align: center;
+}
+
 
 main {
     display: flex;
@@ -60,6 +65,15 @@ aside ul {
 }
 
 aside li {
+    font-size: 2rem;
+    margin-bottom: 30px;
+}
+
+div ul {
+    float: left;
+}
+
+div li {
     font-size: 2rem;
     margin-bottom: 30px;
 }
